Improve dropdown styling
- Update avatra and name classes

--- a/mentionable.css
+++ b/mentionable.css
@@ -5,7 +5,8 @@
 .mentionable {}
 
 .mentionable-dropdown {
-  border: 1px solid #999;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
 }
 
 .mentionable-dropdown ul {
@@ -15,8 +16,8 @@
 }
 
 .mentionable-dropdown li {
-  height: 30px;
-  border-bottom: 1px solid #999;
+  height: 35px;
+  border-bottom: 1px solid #ddd;
 }
 
 .mentionable-dropdown li:last-child {
@@ -28,11 +29,17 @@
   background-color: #00b8e7;
 }
 
-.mentionable-dropdown .profile-image {
-  width: 30px;
-  height: 30px;
+.mentionable-user-avatar {
+  width: 25px;
+  height: 25px;
+  border-radius: 3px;
   float: left;
-  margin-right: 5px;
+  margin: 5px 0 5px 5px;
 }
 
-.mentionable-dropdown .name {}
+.mentionable-user-name {
+  font-size: 13px;
+  float: left;
+  margin: 0;
+  padding: 9px 0 0 7px;
+}
